[gd_scene load_steps=8 format=3 uid="uid://b2dl5qw1jss2w"]

[ext_resource type="Script" uid="uid://ihy5kxx4e6xt" path="res://joypads.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bsrktfrmtkqvo" path="res://joypad_diagram.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://na4hexkywup6" path="res://remap/remap_wizard.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3l3j"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do8y5"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 0.4)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehk82"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujhcf"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 0.4)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3

[node name="JoypadsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="JoypadDiagram" parent="." instance=ExtResource("2")]
position = Vector2(415, 183)
scale = Vector2(0.5, 0.5)

[node name="DeviceInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Label" type="Label" parent="DeviceInfo"]
layout_mode = 2
size_flags_vertical = 1
text = "Device"

[node name="JoyNumber" type="SpinBox" parent="DeviceInfo"]
layout_mode = 2
size_flags_vertical = 0
max_value = 16.0

[node name="VSeparator" type="VSeparator" parent="DeviceInfo"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="JoyName" type="RichTextLabel" parent="DeviceInfo"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
bbcode_enabled = true
text = "Controller Name Here"
scroll_active = false
context_menu_enabled = true
selection_enabled = true

[node name="Axes" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 62.0
offset_right = 255.0
offset_bottom = 322.0
theme_override_constants/separation = -2

[node name="Axis0" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 0"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_g3l3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_do8y5")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis0/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis1" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 1"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis1/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis2" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 2"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis2/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis3" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 3"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis3/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis4" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 4"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis4/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis5" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 5"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis5/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis6" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 6"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis6/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis7" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 7"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis7/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis8" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 8"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis8/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Axis9" type="HBoxContainer" parent="Axes"]
layout_mode = 2

[node name="Label" type="Label" parent="Axes/Axis9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Axis 9"

[node name="ProgressBar" type="ProgressBar" parent="Axes/Axis9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ehk82")
theme_override_styles/fill = SubResource("StyleBoxFlat_ujhcf")
min_value = -100.0
step = 0.0001
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Axes/Axis9/ProgressBar"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]0[/center]"
scroll_active = false

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Buttons:"

[node name="ButtonGrid" type="GridContainer" parent="Buttons"]
layout_mode = 2
columns = 8

[node name="0" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"

[node name="1" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "1"

[node name="2" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "2"

[node name="3" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "3"

[node name="4" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "4"

[node name="5" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "5"

[node name="6" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "6"

[node name="7" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "7"

[node name="8" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "8"

[node name="9" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "9"

[node name="10" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "10"

[node name="11" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "11"

[node name="12" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "12"

[node name="13" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "13"

[node name="14" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "14"

[node name="15" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "15"

[node name="16" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "16"

[node name="17" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "17"

[node name="18" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "18"

[node name="19" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "19"

[node name="20" type="Label" parent="Buttons/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "20"

[node name="Vibration" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_right = 270.0
grow_vertical = 0

[node name="Weak" type="HBoxContainer" parent="Vibration"]
layout_mode = 2

[node name="Label" type="Label" parent="Vibration/Weak"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Weak Motor:"

[node name="Value" type="SpinBox" parent="Vibration/Weak"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="Strong" type="HBoxContainer" parent="Vibration"]
layout_mode = 2

[node name="Label" type="Label" parent="Vibration/Strong"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Strong Motor:"

[node name="Value" type="SpinBox" parent="Vibration/Strong"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="Duration" type="HBoxContainer" parent="Vibration"]
layout_mode = 2

[node name="Label" type="Label" parent="Vibration/Duration"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vibration Duration:"

[node name="Value" type="SpinBox" parent="Vibration/Duration"]
layout_mode = 2
size_flags_vertical = 3
max_value = 10.0
step = 0.1
value = 1.0

[node name="HSeparator" type="HSeparator" parent="Vibration"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Vibration"]
layout_mode = 2

[node name="Start" type="Button" parent="Vibration/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
text = "Start Vibration"

[node name="VSeparator" type="VSeparator" parent="Vibration/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Stop" type="Button" parent="Vibration/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stop Vibration"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Clear" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Set Raw Mapping"

[node name="Remap" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Remap"

[node name="Show" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show"

[node name="RemapWizard" parent="." instance=ExtResource("3")]

[connection signal="meta_clicked" from="DeviceInfo/JoyName" to="." method="_on_joy_name_meta_clicked"]
[connection signal="pressed" from="Vibration/Buttons/Start" to="." method="_on_start_vibration_pressed"]
[connection signal="pressed" from="Vibration/Buttons/Stop" to="." method="_on_stop_vibration_pressed"]
[connection signal="pressed" from="VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="VBoxContainer/Remap" to="." method="_on_Remap_pressed"]
[connection signal="pressed" from="VBoxContainer/Show" to="." method="_on_Show_pressed"]
